# ragnar

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt  test.ipynb
src/: config.py  constants.py  main.py  pipeline.py
src/generation/: prompts.py  response.py
src/preprocessing/: chunk.py  clean.py  parse.py  tokenize.py
src/ragnar/: __init__.py  app.py
src/retrieval/: tfidf.py
src/utils/: tokenize.py
