[project]
name = "ragnar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "marcalph", email = "marcalph@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "langchain-openai>=0.3.19",
    "langchain>=0.3.25",
    "langfuse>=2.60.8",
]

[project.scripts]
ragnar = "ragnar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
